--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
  <!-- Meta Tags -->
   <meta charset="utf-8">
   <meta name="description"  content="Focused on exploring design solutions that would visually communicate the functionality of certain tools and make publicly visible assets.">
-  <meta name="keywords" content="Sketch, Figma, Axure, Invision, Proto.io, Figma, Principal, Adobe Suite (PS, AI, XD), Microsoft Office (Certified)">
-  <meta name="author" content="Joshua Lucas">
+  <meta name="keywords" content="Pandas, VScode,Jupyter Noteook, Data Analytcis(Certified)">
+  <meta name="author" content="Joga Chakradhar">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	  
 	
   <!-- Tab Title Tag -->
-  <title>JOSHUA LUCAS, Resume- UX Designer</title>
+  <title>Joga Chakradhar, Resume- UI Designer</title>
 	
   <!-- Stylesheet -->
   <link type="text/css" href="assets/styles/css/style.css" rel="stylesheet">
@@ -32,11 +32,11 @@
 <body>
 <div id="wrapper">
   <header>
-    <h1>Joshua Lucas</h1>	  
+    <h1>Joga Chakradhar</h1>	  
 	<ul>
-	  <li><a href="mailto:joshglucas@gmail.com"><i class="material-icons">mail_outline</i> joshglucas@gmail.com</a></li>
-	  <li><a href="tel:(678)-634-1002"> <i class="material-icons">phone</i>(678)-634-1002 </a></li>
-	  <li> <a href="https://joshglucas.com/" target="_blank"><i class="material-icons">public</i> www.joshglucas.com</a></li>
+	  <li><a href="mail:ideal.chakri@gmail.com"><i class="material-icons">mail_outline</i> ideal.chakri@gmail.com</a></li>
+	  <li><a href="tel:(+91)8919359652"> <i class="material-icons">phone</i>(+91)8919359652 </a></li>
+	  <li> <a href="www.linkedin.com/in/chakradhar-joga/" target="_blank"><i class="material-icons"></i> Linkedln Profile</a></li>
 	</ul>  
   </header>
   <!-- Header Ends here -->
@@ -45,28 +45,26 @@
     <aside>
       <h2>Education <i class="material-icons">school</i></h2>
       <article>
-        <h3>Universityof North Georgia</h3>
-        <p><span>2015 - 2017</span></p>
-        <p>GPA: 3.4 / 4.0</p>
-        <p>Dean’s List, Honors Student</p>
+        <h3>Ideal institute of technology</h3>
+        <p><span>2016 - 2020</span></p>
+        <p>GPA: 6.84 / 10.0</p>
+        <p>computer science and engineering Student</p>
       </article>
       <!-- Article end -->
 		
       <article>
-        <h3>Kennesaw State University</h3>
-        <p><span>2017 - 2019</span></p>
-        <p>GPA: 3.6 / 4.0</p>
-        <p>B.S. Interactive Design</p>
+        <h3>Aditya engineering college</h3>
+        <p><span>2020 - 2022</span></p>
+        <p>GPA: 8.06 / 10.0</p>
+        <p>Computer science</p>
       </article>
       <!-- Article end -->
 		
       <article>
         <h3>Pertinent Courses</h3>
         <ul>
-          <li> Usability Testing XLS</li>
-          <li>Interaction Design I, II, & III</li>
-          <li>Visual Design I & II</li>
-          <li>SEO & Analytics</li>
+          <li> Data analystics</li>
+          <li>Ui design</li>
         </ul>
       </article>
       <!-- Article end -->
@@ -74,8 +72,8 @@
       <article>
         <h3>Extra Curricular</h3>
         <ul>
-          <li> Officer / Admin of KSU’s
-            Esports Club & Tespa</li>
+          <li> Event organisation,
+         vallyball sports </li>
         </ul>
       </article>
       <!-- Article end -->
@@ -83,19 +81,17 @@
       <article>
         <h3>Software</h3>
         <ul>
-          <li> Sketch, Figma, Axure, Invision, Proto.io, Figma, Principal</li>
-          <li>Adobe Suite (PS, AI, XD)</li>
-          <li>Microsoft Office (Certified)</li>
+          <li> Pandas, VScode</li>
+          <li>Jupyter Noteook</li>
+          <li>Data analytics (Certified)</li>
         </ul>
       </article>
       <!-- Article end -->
       <article>
-        <h3>Methods &amp; Languages</h3>
+        <h3> Languages</h3>
         <ul>
-          <li>Wireframing  &amp; Prototyping</li>
-          <li>User-Testing  &amp; Research</li>
-          <li>Mobile  &amp; Desktop Design</li>
-          <li>HTML5, CSS, Basic Java</li>
+         <li>HTML5, CSS, Basic Java  
+          Python, React.js,Javascript </li>
         </ul>
       </article>
       <!-- Article end --> 
@@ -106,60 +102,43 @@
     <section class="body-content">
       <h2>Work Experience <i class="material-icons">work_outline</i></h2>
       <article>
-        <h3>Google | Ux Design Intern</h3>
-        <p><span>Sunnyvale, CA | May - Aug 2019</span></p>
+        <h3>Nyros | UI Design Intern</h3>
+        <p><span>Front -end Developer| Oct- Jan 2024</span></p>
         <ul>
           <li>Focused on exploring design solutions that would visually communicate the
             functionality of certain tools and make publicly visible assets.</li>
-          <li>Designed third-party integration features to allow for richer, more contextual
-            integrations within Gmail.</li>
-          <li>Crafted responsive user experiences with a mobile-first mentality while still
-            establishing consistent web/desktop interaction patterns.</li>
+          <li>Learning from BRS studios and using application like clickup, Slack,Vscode,
+            Github</li>
+          <li>Its a Front -End Developer Bootcamp program from nyros technology<li>
         </ul>
       </article>
       <!-- Article end -->
 		
       <article>
-        <h3>Blizzard Entertainment | Ux Design Intern</h3>
-        <p><span>Irvine, CA | May - Aug 2017</span></p>
+        <h3>Quadrant Resource|  data analyst</h3>
+        <p><span>  Web data analyst| June - Nov 2023</span></p>
         <ul>
-          <li>Worked in tandem with engineers, product managers and the overall UX team to
-            design creative and intuitive design solutions for HotS playerbase.</li>
-          <li>Contributed to the creation, organization, and distribution of project style guides,
-            pattern libraries, and asset repositories.</li>
-          <li>Designed two proprietary onboarding features to help new players learn vital game
-            information.</li>
+          <li> Its Freelancer   , part-time  job bases</li>
+          <li>Worked as Web data analyst ,Have to submit review rating websites and info which 
+            given by client in level 1.</li>
+          <li> so many info data provided SASReview task rating grades in level 2 .</li>
+          
         </ul>
       </article>
       <!-- Article end -->
-		
+
+      <h2>Projects <i class="material-icons">task</i></h2>
       <article>
-        <h3>Crosscounter Tv | Visual Designer</h3>
-        <p><span>Atlanta, GA | Dec 2015 - May 2017</span></p>
+        <h3>To articulate the problem of attribution in cyber warfare incidents </h3>
+        <p><span>  M.tech project | Apr - dec 2022</span></p>
         <ul>
-          <li> Established visuals such as video thumbnails, promotional graphics, and overlays
-            for the Cross Counter TV team.</li>
-          <li>Directly collaborated with stakeholder’s to ensure premium quality for Excellent
-            Adventuress promotional content on web and social media.</li>
-          <li>Created promotional designs to be displayed on Amazon, Cross Counter TV
-            website, Youtube, Twitter, Facebook & Instagram.</li>
-        </ul>
+         <li> The attribution of cyber attacks is proposed model for detecting cyber
+             attacks and fake news.Implemented in python software for use random forst
+              with3 combination of classifiers.AdaBoost,XGBoost ,Bagging Classifier </li>
       </article>
       <!-- Article end -->
-		
-      <article>
-        <h3>Freelance | Ux / Visual Designer</h3>
-        <p><span>Atlanta, GA | April 2012 - Sep 2015</span></p>
-        <ul>
-          <li>Crafted CUJ’s. flows, card sorts, affinity diagrams, etc. to help convey the best
-            avenues of interest for clintele’s products.
-            Designed deliverables such as wireframes and mocks to optimize for a wide range
-            of devices and platforms.</li>
-        </ul>
-      </article>
-      <!-- Article end --> 
-		
-    </section>
+           
+      </section>
     <!-- Body Content end --> 
 	  
   </div>
