--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<ul>
 	  <li><a href="mail:ideal.chakri@gmail.com"><i class="material-icons">mail_outline</i> ideal.chakri@gmail.com</a></li>
 	  <li><a href="tel:(+91)8919359652"> <i class="material-icons">phone</i>(+91)8919359652 </a></li>
-	  <li> <a href="www.linkedin.com/in/chakradhar-joga/" target="_blank"><i class="material-icons">linkedin</i> Linkedln profile</a></li>
+	  <li> <a href="https://www.linkedin.com/in/chakradhar-joga/" target="_blank"><i class="material-icons">linkedin</i>Linkedin Profile</a></li>
 	</ul>  
   </header>
   <!-- Header Ends here -->
