--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<ul>
 	  <li><a href="mail:ideal.chakri@gmail.com"><i class="material-icons">mail_outline</i> ideal.chakri@gmail.com</a></li>
 	  <li><a href="tel:(+91)8919359652"> <i class="material-icons">phone</i>(+91)8919359652 </a></li>
-	  <li> <a href="https://www.linkedin.com/in/chakradhar-joga/" target="_blank"> <i class="material-icons">language</i>Linkedin Profile</a></li>
+	  <li> <a href="https://www.linkedin.com/in/chakradhar-joga/" target="_blank"> <i class="material-icons"><img src="assets/images/linkedin-logo.png"></i>Linkedin Profile</a></li>
 	</ul>  
   </header>
   <!-- Header Ends here -->
@@ -45,7 +45,7 @@
     <aside>
       <h2>Education <i class="material-icons">school</i></h2>
       <article
-        <h3>Ideal institute of technology</h3>
+        <h3> Ideal institute of technology</h3>
         <p><span>2016 - 2020</span></p>
         <p>GPA: 6.84 / 10.0</p>
         <p>computer science and engineering Student</p>
@@ -56,7 +56,7 @@
         <h3>Aditya engineering college</h3>
         <p><span>2020 - 2022</span></p>
         <p>GPA: 8.06 / 10.0</p>
-        <p>Computer science</p>
+        <p> M.tech ,Computer science</p>
       </article>
       <!-- Article end -->
 		
@@ -116,7 +116,7 @@
 		
       <article>
         <h3>Quadrant Resource|  data analyst</h3>
-        <p><span>  Web data analyst| June - Nov 2023</span></p>
+        <p><span>  Web data analyst| June - Oct 2023</span></p>
         <ul>
           <li> Its Freelancer   , part-time  job bases</li>
           <li>Worked as Web data analyst ,Have to submit review rating websites and info which 
@@ -147,4 +147,3 @@
 </div> <!-- Wrapper Ends here -->
 </body>
 </html>
-
