--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   <div class="main-content">
     <aside>
       <h2>Education <i class="material-icons">school</i></h2>
-      <article
-        <h3> Ideal institute of technology</h3>
+      <article>
+        <h3> Ideal Institute Of Technology</h3>
         <p><span>2016 - 2020</span></p>
         <p>GPA: 6.84 / 10.0</p>
         <p>computer science and engineering Student</p>
